fix(dedicated): fix message horizontal scroll
add pre wrap and word break to remove horizontal scroll

resolves #DTRSD-50951

--- a/packages/manager/apps/dedicated/client/app/css/less/module/user-account/emails.less
+++ b/packages/manager/apps/dedicated/client/app/css/less/module/user-account/emails.less
@@ -18,6 +18,11 @@
   .email-preview {
     position: relative;
 
+    pre {
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
+
     button.email-preview-source-toggle {
       position: absolute;
       top: 0;
